--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <form id="calculatorForm">
             <label for="carType">Select Car Type:</label>
             <select id="carType">
-                <option value="Bugatti Chiron">Bugatti Chiron</option>
-                <option value="Lamborghini Aventador">Lamborghini Aventador</option>
+                <!-- <option value="Bugatti Chiron">Bugatti Chiron</option>
+                <option value="Lamborghini Aventador">Lamborghini Aventador</option> -->
             </select>
             <label for="years">Years to Save:</label>
             <input type="number" id="years" value="5" min="1">
@@ -23,6 +23,6 @@
         </form>
         <div id="result"></div>
     </div>
-    <script src="script.js"></script>
+    <script src="script1.js"></script>
 </body>
 </html>
