--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Luxury Car Ownership Calculator</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -12,8 +13,6 @@
         <form id="calculatorForm">
             <label for="carType">Select Car Type:</label>
             <select id="carType">
-                <!-- <option value="Bugatti Chiron">Bugatti Chiron</option>
-                <option value="Lamborghini Aventador">Lamborghini Aventador</option> -->
             </select>
             <label for="years">Years to Save:</label>
             <input type="number" id="years" value="5" min="1">
@@ -23,6 +22,6 @@
         </form>
         <div id="result"></div>
     </div>
-    <script src="script1.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
