--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Luxury Car Ownership Calculator</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <div class="calculator">
@@ -13,14 +14,24 @@
         <form id="calculatorForm">
             <label for="carType">Select Car Type:</label>
             <select id="carType">
+                <option value="Bugatti Chiron">Bugatti Chiron</option>
+                <option value="Lamborghini Aventador">Lamborghini Aventador</option>
             </select>
             <label for="years">Years to Save:</label>
-            <input type="number" id="years" value="5" min="1">
+            <input type="number" id="years" value="7" min="1">
             <label for="income">Annual Income (USD):</label>
             <input type="number" id="income" value="100000" min="1">
+            <label for="savingsRate">Monthly Savings Rate (%):</label>
+            <input type="number" id="savingsRate" value="20" min="1" max="100">
+            <label for="currentAge">Current Age:</label>
+            <input type="number" id="currentAge" value="27" min="1">
             <button type="button" onclick="calculate()">Calculate</button>
         </form>
-        <div id="result"></div>
+        
+    </div>
+    <div id="result"><h2>Result</h2></div>
+    <div id="chart">
+        <canvas id="savingsChart"></canvas>
     </div>
     <script src="script.js"></script>
 </body>
